[gd_scene load_steps=5 format=3 uid="uid://h72bu6iftir2"]

[ext_resource type="Script" path="res://ui/combat/unit_selected_footer/UnitFooterInventoryContainer/unit_footer_inventory_container.gd" id="1_vqhxg"]
[ext_resource type="PackedScene" uid="uid://diqrf4hmvqdtg" path="res://ui/combat/shared/unit_inventory_slot/inventory_item_icon/InventoryItemIcon.tscn" id="2_63q8m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0u61j"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="Theme" id="Theme_drrs3"]
Panel/styles/panel = SubResource("StyleBoxFlat_0u61j")

[node name="UnitFooterInventoryContainer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1280.0
offset_bottom = -720.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_vqhxg")

[node name="UnitInventoryContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(364, 40)
layout_mode = 0
offset_right = 364.0
offset_bottom = 34.0

[node name="InventoryPanelBack" type="Panel" parent="UnitInventoryContainer"]
custom_minimum_size = Vector2(364, 34)
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_drrs3")

[node name="InventoryContainer" type="HBoxContainer" parent="UnitInventoryContainer/InventoryPanelBack"]
layout_mode = 2
offset_left = 4.0
offset_right = 265.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="UnitInventoryContainer/InventoryPanelBack/InventoryContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="SelectedItemContainer" type="HBoxContainer" parent="UnitInventoryContainer/InventoryPanelBack/InventoryContainer/MarginContainer"]
layout_mode = 2

[node name="InventoryItemIcon" parent="UnitInventoryContainer/InventoryPanelBack/InventoryContainer/MarginContainer/SelectedItemContainer" instance=ExtResource("2_63q8m")]
layout_mode = 2

[node name="EquippedItemName" type="Label" parent="UnitInventoryContainer/InventoryPanelBack/InventoryContainer/MarginContainer/SelectedItemContainer"]
layout_mode = 2
text = "Javelin"

[node name="MarginContainer2" type="MarginContainer" parent="UnitInventoryContainer/InventoryPanelBack/InventoryContainer"]
layout_mode = 2

[node name="InventoryItemIcon" parent="UnitInventoryContainer/InventoryPanelBack/InventoryContainer/MarginContainer2" instance=ExtResource("2_63q8m")]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="UnitInventoryContainer/InventoryPanelBack/InventoryContainer"]
layout_mode = 2

[node name="InventoryItemIcon" parent="UnitInventoryContainer/InventoryPanelBack/InventoryContainer/MarginContainer3" instance=ExtResource("2_63q8m")]
layout_mode = 2

[node name="MarginContainer4" type="MarginContainer" parent="UnitInventoryContainer/InventoryPanelBack/InventoryContainer"]
layout_mode = 2

[node name="InventoryItemIcon" parent="UnitInventoryContainer/InventoryPanelBack/InventoryContainer/MarginContainer4" instance=ExtResource("2_63q8m")]
layout_mode = 2

[node name="MarginContainer5" type="MarginContainer" parent="UnitInventoryContainer/InventoryPanelBack/InventoryContainer"]
layout_mode = 2

[node name="InventoryItemIcon" parent="UnitInventoryContainer/InventoryPanelBack/InventoryContainer/MarginContainer5" instance=ExtResource("2_63q8m")]
layout_mode = 2
